[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.6"
cmake = "0.1.51"
dotenv = "0.15.0"
google-sheets4 = "5.0.5"
googleapis = "0.0.1"
hyper-rustls = "0.27.3"
json = "0.12.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = "0.14.1"
lapin = "2.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
shuttle-runtime = "0.45.0"  # Use the latest version here
shuttle-axum = "0.45.0"
redis = "0.27.2"
futures-util = "0.3.30"
